@@ -109,3 +109,4 @@ install(TARGETS roundtrip
 include(UsePythonTest)
 ADD_PYTHON_TEST(pytest_babel testbabel.py)
 ADD_PYTHON_TEST(pytest_sym testsym.py)
+ADD_PYTHON_TEST(pytest_fastsearch testfastsearch.py)
